Add classes to 'what we do' icon and texts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-sm-3">
                 <img src="pics/dev_icon.png" id="DM"><br>
-                <p>DEVELOPMENT</p>
+                <p class="DM">DEVELOPMENT</p>
                 <div class="what-showing3">
                   <h3>Development</h3>
                   <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
@@ -50,7 +50,7 @@
             </div>
             <div class="col-sm-2">
                 <img src="pics/product_icon.png" id="PM">
-                <p>PRODUCT MANAGEMENT</p>
+                <p class="PM">PRODUCT MANAGEMENT</p>
                 <div class="what-showing4">
                   <h3>Product Management</h3>
                   <p>Planning and development is iterative, Because we are constantly coding and testing, the products we build are always ready to go live.</p>
