Add JQuery fuctions to show the icon and hide the text when clicked

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                <img src="pics/dev_icon.png" id="DM"><br>
+                <img src="pics/dev_icon.png" class="DM"><br>
                 <p class="DM">DEVELOPMENT</p>
                 <div class="what-showing3">
                   <h3>Development</h3>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="col-sm-2">
-                <img src="pics/product_icon.png" id="PM">
+                <img src="pics/product_icon.png" class="PM">
                 <p class="PM">PRODUCT MANAGEMENT</p>
                 <div class="what-showing4">
                   <h3>Product Management</h3>
