--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
           <h2>PORTFOLIO</h2>
             <div class="row">
               <div class="col-sm-3">
-               <img src="pics/work4.jpg"> 
-              </div>
+               <img src="pics/work4.jpg" id="work4">
+                 <h5 id="work04">PROJECT 4</h5>
+               </div> 
+              
               <div class="col-sm-3">
                 <img src="pics/work3.jpg">
               </div>
@@ -75,6 +77,7 @@
                 <img src="pics/work1.jpg">
               </div>
             </div>
+        </div>
         <div class="folios">
             <div class="row">
               <div class="col-sm-3">
@@ -94,16 +97,15 @@
         <div class="contacts">
           <h2>Contact Us</h2>
             <div class="transparent">
-             
             <form>
               <input type="text" id="name" placeholder="Name">
               <input type="email" id="email" placeholder="Email"><br><br>
-              <textarea rows="10" cols="90" name="description" >
+              <textarea rows="10" cols="90" id="description" >
 
-  Your message here...</textarea>
+  Your message here...</textarea><br><br>
+              <button type="button" id="submit">Submit</button>
               </form>
             </div>
-          </div>
         </div>
         <div class="navbar-toggler-icon">
           <img src="pics/twitter.png"> 
