Add fadetoggle method to first row in portfolio section

--- a/index.html
+++ b/index.html
@@ -64,17 +64,19 @@
             <div class="row">
               <div class="col-sm-3">
                <img src="pics/work4.jpg" id="work4">
-                 <h5 id="work04">PROJECT 4</h5>
+               <h5 id="work04">PROJECT 4</h5>  
                </div> 
-              
               <div class="col-sm-3">
-                <img src="pics/work3.jpg">
+                <img src="pics/work3.jpg" id="work3">
+                <h5 id="work03">PROJECT 3</h5> 
               </div>
               <div class="col-sm-3">
-                <img src="pics/work2.jpg">
+                <img src="pics/work2.jpg" id="work2">
+                <h5 id="work02">PROJECT 2</h5> 
               </div>
               <div class="col-sm-2">
-                <img src="pics/work1.jpg">
+                <img src="pics/work1.jpg" id="work1">
+                <h5 id="work01">PROJECT 1</h5> 
               </div>
             </div>
         </div>
