Add hover effect on second row of portfolio section

--- a/index.html
+++ b/index.html
@@ -83,16 +83,20 @@
         <div class="folios">
             <div class="row">
               <div class="col-sm-3">
-                  <img src="pics/work5.jpg">
+                  <img src="pics/work5.jpg" id="work5">
+                  <h5 id="work05">PROJECT 5</h5> 
               </div>
               <div class="col-sm-3">
-                  <img src="pics/work6.jpg">
+                  <img src="pics/work6.jpg" id="work6">
+                  <h5 id="work06">PROJECT 6</h5> 
               </div>
               <div class="col-sm-3">
-                  <img src="pics/work7.jpg">
+                  <img src="pics/work7.jpg" id="work7">
+                  <h5 id="work07">PROJECT 7</h5> 
               </div>
               <div class="col-sm-2">
-                  <img src="pics/work8.jpg">
+                  <img src="pics/work8.jpg" id="work8">
+                  <h5 id="work08">PROJECT 8</h5> 
               </div>
             </div>
         </div>
