Add alert pop up after user enters info to show message received

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="intro">
             <img src="pics/logo.png"><br><br><br><br><br><br><br>
-            <h1>WELCOME<br><br> TO DELANI STUDIO</h1>
+            <h1>WELCOME<br> TO DELANI STUDIO</h1>
             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p><br><br><br><br><br><br><br>
             <img src="pics/mouse_click.png">
             </div>
@@ -109,7 +109,7 @@
               <textarea rows="10" cols="90" id="description" >
 
   Your message here...</textarea><br><br>
-              <button type="button" id="submit">Submit</button>
+              <button type="button" id="submit" onclick="myFunction()">Submit</button>
               </form>
             </div>
         </div>
