--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           <h2>Contact Us</h2>
             <div class="transparent">
             <form>
-              <input type="text" id="name" placeholder="Name">
-              <input type="email" id="email" placeholder="Email"><br><br>
+              <input type="text" id="name" placeholder="Name" size="43">
+              <input type="email" id="email" placeholder="Email" size="43"><br><br>
               <textarea rows="10" cols="90" id="description" >
 
   Your message here...</textarea><br><br>
