Indented the html to look more polished

--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
             <form>
               <input type="text" id="name" placeholder="Name" size="43">
               <input type="email" id="email" placeholder="Email" size="43"><br><br>
-              <textarea rows="10" cols="90" id="description" >
-
-  Your message here...</textarea><br><br>
+              <textarea rows="10" cols="90" id="description" >Your message here...</textarea><br><br>
               <button type="button" id="submit" onclick="myFunction()">Submit</button>
               </form>
             </div>
