Reduce image size in portfolio section

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
           <h2>PORTFOLIO</h2>
             <div class="row">
               <div class="col-sm-3">
-               <img src="pics/work4.jpg" id="work4">
+               <img src="pics/work4.jpg"  width="250" height="auto" id="work4">
                <h5 id="work04">PROJECT 4</h5>  
                </div> 
               <div class="col-sm-3">
-                <img src="pics/work3.jpg" id="work3">
+                <img src="pics/work3.jpg"  width="250" height="auto" id="work3">
                 <h5 id="work03">PROJECT 3</h5> 
               </div>
               <div class="col-sm-3">
-                <img src="pics/work2.jpg" id="work2">
+                <img src="pics/work2.jpg" width="250" height="auto" id="work2">
                 <h5 id="work02">PROJECT 2</h5> 
               </div>
               <div class="col-sm-2">
-                <img src="pics/work1.jpg" id="work1">
+                <img src="pics/work1.jpg" width="250" height="auto" id="work1">
                 <h5 id="work01">PROJECT 1</h5> 
               </div>
             </div>
@@ -85,19 +85,19 @@
         <div class="folios">
             <div class="row">
               <div class="col-sm-3">
-                  <img src="pics/work5.jpg" id="work5">
+                  <img src="pics/work5.jpg" width="250" style="margin-right: 3px; margin-bottom: 3px;" id="work5">
                   <h5 id="work05">PROJECT 5</h5> 
               </div>
               <div class="col-sm-3">
-                  <img src="pics/work6.jpg" id="work6">
+                  <img src="pics/work6.jpg" width="250" style="margin-right: 3px; margin-bottom: 3px;" id="work6">
                   <h5 id="work06">PROJECT 6</h5> 
               </div>
               <div class="col-sm-3">
-                  <img src="pics/work7.jpg" id="work7">
+                  <img src="pics/work7.jpg" width="250" style="margin-right: 3px; margin-bottom: 3px;" id="work7">
                   <h5 id="work07">PROJECT 7</h5> 
               </div>
               <div class="col-sm-2">
-                  <img src="pics/work8.jpg" id="work8">
+                  <img src="pics/work8.jpg" width="250" style="margin-right: 3px; margin-bottom: 3px;" id="work8">
                   <h5 id="work08">PROJECT 8</h5> 
               </div>
             </div>
